Updated all materials in the case parameters to be nuclide-wise so that the direct perturbation calculations can template the input files. Also implemented the direct perturbation calculation as an abstract base class that is subclassed for TSUNAMI-1D and TSUNAMI-3D direct perturbation calculations, which have slightly different edits/io

--- a/case_parameters.yml
+++ b/case_parameters.yml
@@ -13,7 +13,11 @@ reflector_materials:
     c-13  10 0 5.1621E-4 end
 
   nickel: |
-    ni    10 0 9.1322E-2 end
+    ni-58         10 0 6.216919E-2 end
+    ni-60         10 0 2.394746E-2 end
+    ni-61         10 0 1.040979E-3 end
+    ni-62         10 0 3.319098E-3 end
+    ni-64         10 0 8.452770E-4 end
 
 heu_material: |
   u-234 1 0 4.9210E-4 end
